<resources>
    <string name="app_name">第13章 控件高级属性</string>
    <string name="practice_photo_view">PhotoView</string>
    <string name="practice_relay_multitouch_view">接力型多点触控</string>
    <string name="practice_cooperate_multitouch_view">配合型多点触控</string>
    <string name="practice_independent_multitouch_view">独立型多点触控</string>
    <string name="practice_myviewpager">我的ViewPager</string>
    <string name="practice_ondraglistener_gridview">OnDragListener网格View</string>
    <string name="practice_viewdraghelper_gridview">ViewDragHelper网格View</string>
    <string name="practice_ondraglistener_collect_view">OnDragListenerCollectView</string>
    <string name="practice_viewdraghelper_updown_view">ViewDragHelper上下拖拽View</string>
    <string name="practice_dingding_bottomnavigationview">钉钉底部导航</string>
    <string name="practice_swipe_layout">侧滑布局</string>

    <string name="plane">飞机</string>
    <string name="bike">自行车</string>
    <string name="boat">船</string>
    <string name="bus">公交</string>
    <string name="car">汽车</string>
    <string name="run">跑步</string>
    <string name="walk">步行</string>
    <string name="train">火车</string>
</resources>
